[gd_scene load_steps=6 format=3 uid="uid://c2gocuhw2o7py"]

[ext_resource type="Texture2D" uid="uid://dn7lqle2cqtcb" path="res://resources/sprites/logo.png" id="2_2d4ws"]
[ext_resource type="Script" uid="uid://dfnwymtygg1to" path="res://menus/game_version.gd" id="4_3hod2"]
[ext_resource type="Script" uid="uid://cvc42inud8fxx" path="res://menus/menu.gd" id="5"]
[ext_resource type="Script" uid="uid://baky6bgu7psf2" path="res://menus/godot_version.gd" id="5_fdyjp"]
[ext_resource type="AudioStream" uid="uid://d35k5qbr4m3sm" path="res://resources/music/special/Danse Morialta.mp3" id="5_jayei"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.329987, 0.164838, 0.223295, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="MarginContainer"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -300.0
offset_right = 300.0
offset_bottom = 300.0
grow_horizontal = 2

[node name="Title" type="TextureRect" parent="MarginContainer/Control/CenterContainer"]
layout_mode = 2
texture = ExtResource("2_2d4ws")

[node name="VBoxContainer" type="HBoxContainer" parent="MarginContainer/Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -424.0
offset_top = -328.0
offset_right = 424.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 16

[node name="PlayButton" type="Button" parent="MarginContainer/Control/VBoxContainer"]
custom_minimum_size = Vector2(200, 70)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_bottom = NodePath("../ExitButton")
focus_next = NodePath("../ExitButton")
text = "START"

[node name="OptionsButton" type="Button" parent="MarginContainer/Control/VBoxContainer"]
custom_minimum_size = Vector2(200, 70)
layout_mode = 2
size_flags_vertical = 4
focus_neighbor_bottom = NodePath("../ExitButton")
focus_next = NodePath("../ExitButton")
text = "SETTINGS"

[node name="CreditsButton" type="Button" parent="MarginContainer/Control/VBoxContainer"]
custom_minimum_size = Vector2(200, 70)
layout_mode = 2
size_flags_vertical = 4
focus_neighbor_bottom = NodePath("../ExitButton")
focus_next = NodePath("../ExitButton")
text = "CREDITS"

[node name="ExitButton" type="Button" parent="MarginContainer/Control/VBoxContainer"]
custom_minimum_size = Vector2(200, 70)
layout_mode = 2
size_flags_vertical = 4
focus_neighbor_top = NodePath("../PlayButton")
focus_previous = NodePath("../PlayButton")
text = "EXIT"

[node name="Version" type="VBoxContainer" parent="MarginContainer/Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -50.0
offset_right = 122.0
grow_vertical = 0

[node name="GameVersion" type="Label" parent="MarginContainer/Control/Version"]
layout_mode = 2
theme_type_variation = &"LabelSmall"
text = "<x.y.z>"
script = ExtResource("4_3hod2")

[node name="GodotVersion" type="Label" parent="MarginContainer/Control/Version"]
layout_mode = 2
theme_type_variation = &"LabelSmall"
theme_override_colors/font_color = Color(0.92549, 0.92549, 0.92549, 1)
text = "<GodotVersion>"
script = ExtResource("5_fdyjp")

[node name="Credits" type="VBoxContainer" parent="MarginContainer/Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -86.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0

[node name="MadeByLabel" type="Label" parent="MarginContainer/Control/Credits"]
layout_mode = 2
theme_type_variation = &"LabelSmall"
theme_override_colors/font_color = Color(1, 1, 1, 1)
horizontal_alignment = 2

[node name="Developer1" type="Label" parent="MarginContainer/Control/Credits"]
visible = false
layout_mode = 2
theme_type_variation = &"LabelSmall"
theme_override_colors/font_color = Color(0.92549, 0.92549, 0.92549, 1)

[node name="Developer2" type="Label" parent="MarginContainer/Control/Credits"]
visible = false
layout_mode = 2
theme_type_variation = &"LabelSmall"
theme_override_colors/font_color = Color(0.886275, 0.87451, 0.87451, 1)
text = "Developer 2"

[node name="Developer3" type="Label" parent="MarginContainer/Control/Credits"]
visible = false
layout_mode = 2
theme_type_variation = &"LabelSmall"
theme_override_colors/font_color = Color(0.886275, 0.87451, 0.87451, 1)
text = "Developer 3"

[node name="CenterContainer2" type="CenterContainer" parent="MarginContainer/Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -287.0
offset_top = -40.0
offset_right = 287.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Control/CenterContainer2"]
layout_mode = 2

[node name="CheckButton" type="CheckBox" parent="MarginContainer/Control/CenterContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Disable strong language (Skips all Kaguya-Mokou dialogue)"

[node name="CheckButton2" type="CheckBox" parent="MarginContainer/Control/CenterContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Disable flashing lights (Please check if you are sensitive)"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_jayei")
bus = &"BGM"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 64.0
offset_top = -16.0
offset_right = 304.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 12
text = "IDK how2 design UI bleh:p"

[connection signal="pressed" from="MarginContainer/Control/VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="MarginContainer/Control/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MarginContainer/Control/VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="MarginContainer/Control/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="toggled" from="MarginContainer/Control/CenterContainer2/VBoxContainer/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="toggled" from="MarginContainer/Control/CenterContainer2/VBoxContainer/CheckButton2" to="." method="_on_check_button_2_toggled"]
